plugins {
	id 'java'
}

repositories {
	mavenLocal()
	maven {
		url = 'https://repo.runelite.net'
		content {
			includeGroupByRegex("net\\.runelite.*")
		}
	}
	mavenCentral()
}

def runeLiteVersion = 'latest.release'

configurations {
	pluginClasspath
}

dependencies {
	compileOnly group: 'net.runelite', name:'client', version: runeLiteVersion
	pluginClasspath group: 'net.runelite', name:'client', version: runeLiteVersion

	compileOnly 'org.projectlombok:lombok:1.18.30'
	annotationProcessor 'org.projectlombok:lombok:1.18.30'

	testImplementation 'junit:junit:4.12'
	testImplementation group: 'net.runelite', name:'client', version: runeLiteVersion
	testImplementation group: 'net.runelite', name:'jshell', version: runeLiteVersion
}

task runClient(type: JavaExec) {
	doFirst {
		def pluginFiles = configurations.pluginClasspath.resolvedConfiguration.lenientConfiguration.files
		classpath = files(pluginFiles) + sourceSets.main.output
		errorOutput = new FileOutputStream("${projectDir}/runelite-crash.log", true)
	}
	mainClass = 'net.runelite.client.RuneLite'
	args '--developer-mode'
	jvmArgs '-ea',
	        '-Dsun.java2d.noddraw=true',
	        '--add-opens=java.desktop/sun.awt=ALL-UNNAMED',
	        '--add-opens=java.desktop/sun.java2d=ALL-UNNAMED'
}

group = 'com.distractionreducer'
version = '1.0-SNAPSHOT'

tasks.withType(JavaCompile) {
	options.encoding = 'UTF-8'
	options.release.set(11)
}